--- a/Lab 6/Lab6/Lab6.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab 6/Lab6/Lab6.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Mar  6 15:07:58 2024</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Mar  7 00:15:20 2024</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>3beb511f384247a78c34fbc528b2f1f1</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>159</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>8887e322991f57ed9821f3aa917539c3</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>212936966_0_0_922</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>175</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>26f196dffa5054149539427189c9b7d0</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>212936966_0_0_727</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a35t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,12 +20,12 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen 5 Microsoft Surface (R) Edition</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2096 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen 5 5600X 6-Core Processor             </TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3693 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Windows Server 2016 or Windows 10</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>15.000 GB</TD>
-  <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
+  <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>2</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
@@ -38,7 +38,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_apply=1</TD>
    <TD>basedialog_cancel=8</TD>
    <TD>basedialog_no=1</TD>
-   <TD>basedialog_ok=56</TD>
+   <TD>basedialog_ok=57</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=6</TD>
    <TD>baseworkspace_float=1</TD>
    <TD>boardchooser_board_table=1</TD>
@@ -47,8 +47,8 @@
    <TD>confirmsavetexteditsdialog_yes=1</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>createsrcfiledialog_file_name=14</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=280</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=426</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=320</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=470</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>graphicalview_zoom_fit=11</TD>
 </TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=3</TD>
@@ -61,15 +61,15 @@
    <TD>mainmenumgr_project=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_tools=2</TD>
    <TD>messagewithoptiondialog_dont_show_this_dialog_again=2</TD>
-   <TD>msgtreepanel_message_view_tree=27</TD>
+   <TD>msgtreepanel_message_view_tree=29</TD>
    <TD>msgview_critical_warnings=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_information_messages=3</TD>
-   <TD>msgview_warning_messages=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_information_messages=4</TD>
+   <TD>msgview_warning_messages=3</TD>
    <TD>pacodeeditor_goto_definition=1</TD>
    <TD>pacommandnames_add_config_memory=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=18</TD>
    <TD>pacommandnames_archive_project=1</TD>
-   <TD>pacommandnames_auto_connect_target=27</TD>
+   <TD>pacommandnames_auto_connect_target=28</TD>
    <TD>pacommandnames_auto_update_hier=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_log_window=1</TD>
    <TD>pacommandnames_open_hardware_manager=8</TD>
@@ -81,10 +81,10 @@
    <TD>pacommandnames_simulation_relaunch=21</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run_behavioral=11</TD>
    <TD>paviews_code=22</TD>
-   <TD>paviews_project_summary=43</TD>
-   <TD>programdebugtab_open_target=15</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=55</TD>
-   <TD>programfpgadialog_program=175</TD>
+   <TD>paviews_project_summary=48</TD>
+   <TD>programdebugtab_open_target=16</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=58</TD>
+   <TD>programfpgadialog_program=191</TD>
    <TD>programfpgadialog_specify_bitstream_file=5</TD>
    <TD>progressdialog_background=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
@@ -94,7 +94,7 @@
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_save_file=1</TD>
    <TD>rdicommands_settings=1</TD>
    <TD>rdiviews_waveform_viewer=43</TD>
-   <TD>saveprojectutils_save=18</TD>
+   <TD>saveprojectutils_save=23</TD>
 </TR><TR ALIGN='LEFT'>   <TD>settingsdialog_options_tree=12</TD>
    <TD>settingsdialog_project_tree=3</TD>
    <TD>settingsoptionsprojectpage_reopen_last_project_on_startup=1</TD>
@@ -107,8 +107,8 @@
    <TD>srcchoosertable_src_chooser_table=4</TD>
    <TD>srcmenu_ip_hierarchy=4</TD>
    <TD>srcmenu_refresh_hierarchy=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>statemonitor_reset_run=10</TD>
-   <TD>syntheticastatemonitor_cancel=20</TD>
+</TR><TR ALIGN='LEFT'>   <TD>statemonitor_reset_run=11</TD>
+   <TD>syntheticastatemonitor_cancel=21</TD>
    <TD>taskbanner_close=16</TD>
    <TD>tclconsoleview_tcl_console_code_editor=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>waveformnametree_waveform_name_tree=50</TD>
@@ -118,18 +118,18 @@
 <TR ALIGN='LEFT'>   <TD>addcfgmem=2</TD>
    <TD>addsources=18</TD>
    <TD>archiveproject=1</TD>
-   <TD>autoconnecttarget=25</TD>
+   <TD>autoconnecttarget=26</TD>
 </TR><TR ALIGN='LEFT'>   <TD>closeproject=1</TD>
    <TD>editdelete=1</TD>
-   <TD>editundo=5</TD>
-   <TD>launchprogramfpga=174</TD>
+   <TD>editundo=6</TD>
+   <TD>launchprogramfpga=189</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=151</TD>
+   <TD>openhardwaremanager=165</TD>
    <TD>openrecenttarget=19</TD>
-   <TD>programdevice=129</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=211</TD>
+   <TD>programdevice=142</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=234</TD>
    <TD>runsynthesis=1</TD>
-   <TD>savefileproxyhandler=17</TD>
+   <TD>savefileproxyhandler=19</TD>
    <TD>settopnode=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>showview=16</TD>
    <TD>simulationbreak=4</TD>
@@ -139,11 +139,12 @@
    <TD>simulationrunfortime=28</TD>
    <TD>toolssettings=3</TD>
    <TD>unselectallcmdhandler=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=22</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskprogramanddebug=1</TD>
+   <TD>viewtaskprojectmanager=26</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=11</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=12</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -183,42 +184,42 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
-    <TD>carry4=93</TD>
+    <TD>carry4=103</TD>
     <TD>fdce=16</TD>
-    <TD>fdre=385</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=107</TD>
+    <TD>fdre=592</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=141</TD>
     <TD>ibuf=7</TD>
-    <TD>lut1=73</TD>
-    <TD>lut2=237</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=105</TD>
-    <TD>lut4=347</TD>
-    <TD>lut5=116</TD>
-    <TD>lut6=222</TD>
+    <TD>lut1=76</TD>
+    <TD>lut2=259</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=115</TD>
+    <TD>lut4=475</TD>
+    <TD>lut5=177</TD>
+    <TD>lut6=278</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>obuf=26</TD>
     <TD>startupe2=1</TD>
-    <TD>vcc=26</TD>
+    <TD>vcc=34</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
-    <TD>carry4=93</TD>
+    <TD>carry4=103</TD>
     <TD>fdce=16</TD>
-    <TD>fdre=385</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=107</TD>
+    <TD>fdre=592</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=141</TD>
     <TD>ibuf=7</TD>
-    <TD>lut1=73</TD>
-    <TD>lut2=237</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=105</TD>
-    <TD>lut4=347</TD>
-    <TD>lut5=116</TD>
-    <TD>lut6=222</TD>
+    <TD>lut1=76</TD>
+    <TD>lut2=259</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=115</TD>
+    <TD>lut4=475</TD>
+    <TD>lut5=177</TD>
+    <TD>lut6=278</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>obuf=26</TD>
     <TD>startupe2=1</TD>
-    <TD>vcc=26</TD>
+    <TD>vcc=34</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -298,7 +299,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000834</TD>
+    <TD>clocks=0.000920</TD>
     <TD>confidence_level_clock_activity=High</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -310,7 +311,7 @@
     <TD>devstatic=0.071948</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tcpg236-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.117185</TD>
+    <TD>dynamic=0.117452</TD>
     <TD>effective_thetaja=5.0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
@@ -320,7 +321,7 @@
     <TD>i/o=0.000069</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.9 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000110</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000149</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -332,12 +333,12 @@
     <TD>mmcm=0.116009</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.189132</TD>
+</TR><TR ALIGN='LEFT'>    <TD>on-chip_power=0.189400</TD>
     <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>package=cpg236</TD>
-    <TD>pct_clock_constrained=0.000000</TD>
+    <TD>pct_clock_constrained=1.000000</TD>
     <TD>pct_inputs_defined=14</TD>
     <TD>platform=nt64</TD>
 </TR><TR ALIGN='LEFT'>    <TD>process=typical</TD>
@@ -346,7 +347,7 @@
     <TD>read_saif=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>set/reset_probability=0.000000</TD>
     <TD>signal_rate=False</TD>
-    <TD>signals=0.000163</TD>
+    <TD>signals=0.000305</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>speedgrade=-1</TD>
     <TD>static_prob=False</TD>
@@ -375,9 +376,9 @@
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_static_current=0.000165</TD>
     <TD>vccbram_total_current=0.000165</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.001437</TD>
+    <TD>vccint_dynamic_current=0.001704</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccint_static_current=0.009749</TD>
-    <TD>vccint_total_current=0.011185</TD>
+    <TD>vccint_total_current=0.011453</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco12_static_current=0.000000</TD>
@@ -516,25 +517,25 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=2</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=93</TD>
+    <TD>carry4_used=103</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdce_functional_category=Flop &amp; Latch</TD>
     <TD>fdce_used=16</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=385</TD>
+    <TD>fdre_used=592</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=7</TD>
     <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=75</TD>
+    <TD>lut1_used=78</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=232</TD>
+    <TD>lut2_used=254</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=105</TD>
+    <TD>lut3_used=115</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=347</TD>
+    <TD>lut4_used=475</TD>
     <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=116</TD>
+    <TD>lut5_used=177</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=222</TD>
+    <TD>lut6_used=278</TD>
     <TD>mmcme2_adv_functional_category=Clock</TD>
     <TD>mmcme2_adv_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
@@ -556,34 +557,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=777</TD>
-    <TD>lut_as_logic_util_percentage=3.74</TD>
+    <TD>lut_as_logic_used=1005</TD>
+    <TD>lut_as_logic_util_percentage=4.83</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=401</TD>
-    <TD>register_as_flip_flop_util_percentage=0.96</TD>
+    <TD>register_as_flip_flop_used=608</TD>
+    <TD>register_as_flip_flop_util_percentage=1.46</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=777</TD>
-    <TD>slice_luts_util_percentage=3.74</TD>
+    <TD>slice_luts_used=1005</TD>
+    <TD>slice_luts_util_percentage=4.83</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=401</TD>
-    <TD>slice_registers_util_percentage=0.96</TD>
+    <TD>slice_registers_used=608</TD>
+    <TD>slice_registers_util_percentage=1.46</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=777</TD>
-    <TD>lut_as_logic_util_percentage=3.74</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=1005</TD>
+    <TD>lut_as_logic_util_percentage=4.83</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -591,35 +592,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=46</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=46</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=52</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=52</TD>
-    <TD>register_driven_from_outside_the_slice_used=98</TD>
-    <TD>register_driven_from_within_the_slice_fixed=98</TD>
-    <TD>register_driven_from_within_the_slice_used=303</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=113</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=113</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=72</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=72</TD>
+    <TD>register_driven_from_outside_the_slice_used=185</TD>
+    <TD>register_driven_from_within_the_slice_fixed=185</TD>
+    <TD>register_driven_from_within_the_slice_used=423</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=401</TD>
-    <TD>slice_registers_util_percentage=0.96</TD>
-    <TD>slice_used=267</TD>
-    <TD>slice_util_percentage=3.28</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=608</TD>
+    <TD>slice_registers_util_percentage=1.46</TD>
+    <TD>slice_used=356</TD>
+    <TD>slice_util_percentage=4.37</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=173</TD>
+    <TD>slicel_used=203</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=94</TD>
+    <TD>slicem_used=153</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=80</TD>
-    <TD>unique_control_sets_util_percentage=0.98</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.98</TD>
-    <TD>using_o5_and_o6_used=320</TD>
-    <TD>using_o5_output_only_fixed=320</TD>
+    <TD>unique_control_sets_used=118</TD>
+    <TD>unique_control_sets_util_percentage=1.45</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=1.45</TD>
+    <TD>using_o5_and_o6_used=372</TD>
+    <TD>using_o5_output_only_fixed=372</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=457</TD>
+    <TD>using_o6_output_only_used=633</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -708,10 +709,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:41s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:22s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=628.945MB</TD>
-    <TD>memory_peak=920.020MB</TD>
+    <TD>memory_gain=642.668MB</TD>
+    <TD>memory_peak=933.488MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
